# two-switch

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: debounced_button.rs  main.rs  persistence.rs  state.rs  toggle_with_momentary.rs
