[package]
authors = ["Eric Wood <eric@ericwood.org>"]
edition = "2021"
name = "two-switch-stm32f0"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = { version = "0.5.0", features = [
  "nightly",
  "defmt",
  "integrated-timers",
  "arch-cortex-m",
  "executor-thread",
] }
embassy-time = { version = "0.3.0", features = ["defmt"] }
embassy-stm32 = { version = "0.1.0", features = [
  "defmt",
  "memory-x",
  "stm32f030f4",
  "time-driver-any",
  "exti",
  "unstable-pac",
] }
embassy-futures = "0.1.1"
embassy-sync = "0.5.0"

defmt = "0.3.5"
defmt-rtt = "0.4.0"

cortex-m = { version = "0.7.7", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["unsafe-assume-single-core"] }
eeprom24x = "0.7.0"

[profile.dev]
debug = 2
opt-level = "z"
lto = true
codegen-units = 1

[profile.release]
debug = 2
opt-level = "z"
lto = true
codegen-units = 1
